# server/routes/index.js
@@ -8,5 +8,6 @@ const firewall = require("../security/accesstoken");
 app.use("/login", require("./login"));
 app.use("/user", expressAccessToken, firewall, require("./users"));
 app.use("/session", expressAccessToken, firewall, require("./session"));
+app.use("/appointments", expressAccessToken, firewall, require("./appointments"));
 
 module.exports = app;
