# server/swagger/swagger.json
@@ -7,7 +7,7 @@
     },
     "produces": ["application/json"],
     "host": "localhost:5000",
-    "basePath": "/api",
+    "basePath": "/api", 
     "paths": {
       "/user/": {
         "post": {
@@ -43,6 +43,48 @@
                 }
             }],
             "responses": {}  
+            }
+        },
+        "/appointments": {
+            "get": {
+                "x-swagger-router-controller": "middleware-name3",
+                "operationId": "showAppointments",
+                "tags": ["Appointments"],
+                "summary": "Show appointments",
+                "parameters": [{
+                    "in": "query",
+                    "name": "idUser",
+                    "required": true,
+                    "type": "string"
+                }, {
+                    "in": "query",
+                    "name": "page",
+                    "required": false,
+                    "type": "string"
+                }, {
+                    "in": "query",
+                    "name": "size",
+                    "required": false,
+                    "type": "string" 
+                }, {
+                    "in": "query",
+                    "name": "order",
+                    "required": false,
+                    "type": "string"
+                }, {
+                    "in": "query",
+                    "name": "way",
+                    "required": false,
+                    "type": "string"
+                }, {
+                    "in": "header",
+                    "name": "authorization",
+                    "require": true,
+                    "type": "string"
+                }],
+                "responses": {
+
+                }
             }
         }
     },
@@ -105,6 +147,27 @@
             "xml": {
               "name": "Login"
             }
-          }
+          },
+        "Appointments": {
+            "properties": {
+                "idUser": {
+                    "type": "Schema.Types.ObjectId",
+                    "ref": "users"
+                },
+                "idPacient": {
+                    "type": "Schema.Types.ObjectId",
+                    "ref": "users"
+                },
+                "date": {
+                    "type": "string"
+                },
+                "hour": {
+                    "type": "string"
+                }
+            },
+            "xml": {
+                "name": "Appointments"
+            }
+        }
     }
 }
